# argsplitter

./: Cargo.toml  README.md  updatereadme.py
.github/workflows/: test.yml
examples/: anyhow.rs  demo.rs  flagsonly.rs  send_mail.rs  twoargs.rs
src/: argerror.rs  core.rs  item.rs  lib.rs  main_support.rs  splitter.rs
src/oschars/: mod.rs  unix.rs  windows.rs
