[package]
name = "argsplitter"
version = "0.3.0"
license = "MIT"
description = "A light-weight command line parsing library"
repository = "https://github.com/joerivanruth/argsplitter/"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
anyhow = "1.0.0"