[package]
name = "argsplitter"
version = "0.4.0"
license = "MIT"
description = "A light-weight command line argument parser"
repository = "https://github.com/joerivanruth/argsplitter/"
edition = "2021"
categories = ["command-line-interface"]
keywords = ["cli", "parser", "argument", "command"]
exclude = ["todo.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
anyhow = "1.0.0"